--- a/index.html
+++ b/index.html
@@ -3,16 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Mini Allo-ciné</title>
-    <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo">
+    <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <header>
+        <h1 class="page-title text-center text-warning-emphasis border border-light rounded-5 border-4 border-opacity-50 mx-5 my-2">Projet Mini Allo-Ciné !</h1>
+    </header>
 
+    <!-- <div id="back-to-top">
+        <a id="back-icon" class="" href="#home" title="Back to top"><img  width=3% src="./flèche-haut-50.png" alt="Up"></a>
+    </div> -->
 
+    <div class="card1"></div>
 
-
-    <script src=""></script>
-    <script src=""></script>
+    <footer class="mx-5 px-3 my-5 py-5">
+        <p>&copy Renaud Bresson - 2023</p>
+    </footer>
+    
+    <script src="./js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src=""></script>
 </body>
 </html>
